--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,31 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Профайл пользователя {{ name.get_full_name }}{% endblock %}     
+{% block title %}Профайл пользователя{{ author.get_full_name }}{% endblock %}     
 {% block content %}
     <div class="container py-5">        
-      <h1>Все посты пользователя {{ name.get_full_name }} </h1>
+      <h1>Все посты пользователя {{ author.get_full_name }} </h1>
       <h3>Всего постов: {{ page_obj.paginator.count }} </h3>
       {% for post in page_obj %}
-        <article>
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }} 
-            </li>
-          </ul>
-          <p>
-            {{ post.text|linebreaks }}
-          </p>
-          <a href="{% url 'posts:post_edit' post.pk %}">подробная информация </a></br>
-               
-          {% if post.group %}   
-            <a href="{% url 'posts:group_posts_page' post.group.slug %}">#Группа {{ post.group.title }}</a>
-          {% else %}
-            <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
-          {% endif %}
-          {% if not forloop.last %}<hr>{% endif %}        
-        </article>
+        {% include 'posts/includes/post_card.html' %}
       {% endfor %}  
     </div>
     {% include 'posts/includes/paginator.html' %}
