--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-  {% if is_edit %}
-    Редактирование поста
-  {% else %}
-    Новый пост
-  {% endif %}
+  {% if form.instance.pk %}Редактирование поста{% else %}Новый пост{% endif %}
 {% endblock %}
 {% block content %}
       <div class="container py-5">
@@ -12,51 +8,17 @@
           <div class="col-md-8 p-5">
             <div class="card">
               <div class="card-header">
-                {% if is_edit  %} 
-                  Редактирование поста
-                {% else %}
-                  Новый пост
-                {% endif %}         
+                {% if form.instance.pk %} Редактирование поста{% else %}Новый пост{% endif %}         
               </div>
-              <div class="card-body">        
+              <div class="card-body">
+                {% include 'users/includes/form_errors.html' %}     
                 <form method="post" action="">
                   {% csrf_token %}
 
-                  <div class="form-group row my-3 p-3">
-                    <label for="id_text">
-                      Текст поста                  
-                      <span class="required text-danger" >*</span>                  
-                    </label>
-                    <textarea name="text" cols="40" rows="10" class="form-control" required id="id_text">
-                      {% if is_edit %}
-                        {{ post.text }}
-                      {% endif %}
-                    </textarea>                
-                    <small id="id_text-help" class="form-text text-muted">
-                      Текст нового поста
-                    </small>                  
-                  </div>            
-                  <div class="form-group row my-3 p-3">
-                    <label for="id_group">
-                      Группа                  
-                    </label>
-                    <select name="group" class="form-control" id="id_group">
-                      <option value="" selected>---------</option>
-                      {% for group in groups%}
-                      <option value="{{ group.id }}">{{ group.title }}</option>
-                      {% endfor %}
-                    </select>
-                    <small id="id_group-help" class="form-text text-muted">
-                      Группа, к которой будет относиться пост
-                    </small>
-                  </div>
+                  {% include 'users/includes/form_cycle.html' %}
                   <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary">
-                      {% if is_edit %}
-                        Добавить
-                      {% else %}
-                        Сохранить
-                      {% endif %}
+                      {% if form.instance.pk %}Добавить{% else %}Сохранить{% endif %}
                     </button>
                   </div>
                 </form>
