--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -7,18 +7,7 @@
     <h1>{{ group.title }}</h1>
     <p>{{ group.description|linebreaks }}</p>
     {% for post in page_obj %}
-      <article>
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>      
-        <p>{{ post.text|linebreaks }}</p>
-        {% if not forloop.last %}<hr>{% endif %}
-      </article>
+      {% include 'posts/includes/post_card.html' %}
     {% endfor %}
   </div>
   {% include 'posts/includes/paginator.html' %}   
