--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,24 +6,7 @@
   <div class="container py-5">     
     <h1>Последние обновления на сайте</h1>
       {% for post in page_obj %}
-        <article>
-          <ul>
-            <li>
-              Автор: 
-              <a href="{% url 'posts:profile' post.author.username %}">{{ post.author.get_full_name }}</a>
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>
-          <p>{{ post.text|linebreaks }}</p>    
-          {% if post.group %}   
-            <a href="{% url 'posts:group_posts_page' post.group.slug %}">#Группа {{ post.group.title }}</a>
-          {% else %}
-            <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
-          {% endif %}
-          {% if not forloop.last %}<hr>{% endif %}
-        </article>
+        {% include 'posts/includes/post_card.html' %}
       {% endfor %}
   </div>
   {% include 'posts/includes/paginator.html' %}
