--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Пост {{ text }}{% endblock %}
+{% block title %}Подробная информация{% endblock %}
 {% block content %}
       <div class="row">
         <aside class="col-12 col-md-3">
@@ -13,19 +13,28 @@
                 <a href="{% url 'posts:group_posts_page' post.group.slug %}">
                   все записи группы
                 </a>
+                {% else %}
+                  <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
               </li>
             {% endif %}
               <li class="list-group-item">
                 Автор: {{ post.author.get_full_name }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span> {{ post_count }} </span>
+              Всего постов автора:  <span> {{ post.author.posts.count }} </span>
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author.username %}">
-                все посты пользователя
+                Все посты пользователя
               </a>
             </li>
+            {% if post.author.id == request.user.id %}
+            <li class="list-group-item">
+              <a href="{% url 'posts:post_edit' post.pk %}">
+                Редактировать
+              </a>
+            </li>
+            {% endif %}
           </ul>
         </aside>
         <article class="col-12 col-md-9">
