--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -28,7 +28,7 @@
                 Все посты пользователя
               </a>
             </li>
-            {% if post.author.id == request.user.id %}
+            {% if post.author == request.user %}
             <li class="list-group-item">
               <a href="{% url 'posts:post_edit' post.pk %}">
                 Редактировать
