--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -13,7 +13,7 @@
                 <form method="post" action="">
                   {% csrf_token %}
                   
-                  {% include 'users/includes/form_cycle.html' %}
+                  {% include 'includes/form_cycle.html' %}
                   <div class="col-md-6 offset-md-4">
                     <button type="submit" class="btn btn-primary">
                       Изменить пароль
