--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -9,7 +9,7 @@
           Войти на сайт
         </div>
         <div class="card-body">
-          {% include 'users/includes/form_errors.html' %}
+          {% include 'includes/form_errors.html' %}
           <form method="post"
             {% if action_url %}
               action="{% url action_url %}"
@@ -17,7 +17,7 @@
           >
           {% csrf_token %}
 
-          {% include 'users/includes/form_cycle.html' %}
+          {% include 'includes/form_cycle.html' %}
           <div class="col-md-6 offset-md-4">
             <button type="submit" class="btn btn-primary">
               Войти
