--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -15,7 +15,7 @@
                 <form method="post" action="">
                 {% csrf_token %}
 
-                  {% include 'users/includes/form_cycle.html' %}
+                  {% include 'includes/form_cycle.html' %}
                   <div class="col-md-6 offset-md-4">
                     <button type="submit" class="btn btn-primary">
                       Назначить новый пароль
